fix: horizontal scrollbars #63

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -1430,7 +1430,7 @@ input.form-control {
 .intro-header {
   height: 100vh;
   min-height: 686px;
-  width: 100vw;
+  width: 100%;
   padding: 96px 96px 64px 96px; }
   @media (max-width: 767px) {
     .intro-header {
